src/components/Tag/Tag.scss
@import "../../styles/fonts.scss";
@import "../../styles/colors.scss";
@import "../../styles/breakpoints.scss";

.tag {
  @include tag-text;
  color: $turqoise;
  border: 1px solid $turqoise;
  width: fit-content;
  padding: space(12);
  display: inline;
  background-color: $white;

  &--selected {
    background-color: $turqoise;
    color: $white;
  }

  @include for-phone-only {
    padding: space(8);
  }

  &--search {
    color: $ribienna;
    border-color: $ribienna;
    margin: space(12) space(8) space(8) space(16);
    height: fit-content;
    cursor: pointer;

    @include for-phone-only {
      margin: pxtorem(6px) pxtorem(4px) pxtorem(4px) space(8);
    }

    &--selected {
      background-color: $ribienna;
      color: $white;
    }

    &--small {
      @include tag-text-s;
    }
  }

  &--remove {
    vertical-align: middle;
    margin-left: space(12);
  }

  &--story {
    @include button-text-alt;
    padding: space(12) space(20);
    margin: space(8);

    &:first-of-type {
      margin: space(8);
    }

    @include for-phone-only {
      padding: space(8) space(20);
    }
  }
}

